fixed  backticks not showing up in password inputs error

--- a/src/styles/kit/_typography.scss
+++ b/src/styles/kit/_typography.scss
@@ -60,6 +60,10 @@ p {
   font-weight: lighter;
 }
 
+.password-input {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .en {
   font-family: 'Nunito Sans';
 
